--- a/MusicInstrumentLessoner/app/src/main/AndroidManifest.xml
+++ b/MusicInstrumentLessoner/app/src/main/AndroidManifest.xml
@@ -8,21 +8,35 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- android:label="@string/app_name_kor" -->
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".myactivity.MainActivity">
+        <activity
+            android:name=".myactivity.SplashActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".myactivity.LoginActivity" />
+        <activity
+            android:name=".myactivity.MainActivity"
+            android:theme="@style/MainAppTheme" />
+        <activity android:name=".myactivity.TemplateDetailActivity" />
+        <activity android:name=".myactivity.PracticeDetailActivity" />
+        <activity android:name=".myactivity.TeacherPracticeDetailActivity" />
+        <activity android:name=".myactivity.UserGroupDetailActivity" />
+        <activity android:name=".myactivity.GuideActivity" />
+        <activity android:name=".myactivity.PracticeListenActivity"></activity>
     </application>
 
 </manifest>
