--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/AndroidManifest.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".myactivity.SplashActivity"
-            android:label="@string/app_name"
+            android:label="@string/appName"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
