--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/AndroidManifest.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/AndroidManifest.xml
@@ -39,5 +39,5 @@
         <activity android:name=".myactivity.GuideActivity" />
         <activity android:name=".myactivity.PracticeListenActivity" />
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
