--- a/express-mysql/package.json
+++ b/express-mysql/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "^2.6.1",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
