--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/build.gradle
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation 'com.github.adrielcafe:AndroidAudioConverter:0.0.8'
     implementation group: 'com.android.volley', name: 'volley', version: '1.1.1'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    implementation 'com.squareup.okhttp3:okhttp:3.6.0'
 }
