--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/AndroidManifest.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:largeHeap="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -39,5 +40,4 @@
         <activity android:name=".myactivity.GuideActivity" />
         <activity android:name=".myactivity.PracticeListenActivity" />
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
