--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/build.gradle
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/build.gradle
@@ -44,7 +44,8 @@ dependencies {
     implementation 'com.github.Semantive:waveform-android:v1.2'
     implementation 'com.github.adrielcafe:AndroidAudioRecorder:0.3.0'
     implementation 'com.github.adrielcafe:AndroidAudioConverter:0.0.8'
-    implementation group: 'com.android.volley', name: 'volley', version: '1.1.1'
+    compile group: 'com.android.volley', name: 'volley', version: '1.1.1'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
