add AddTemplateActivity 및 정상실행 가능

--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/AndroidManifest.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/AndroidManifest.xml
@@ -39,5 +39,6 @@
         <activity android:name=".myactivity.UserGroupDetailActivity" />
         <activity android:name=".myactivity.GuideActivity" />
         <activity android:name=".myactivity.PracticeListenActivity" />
+        <activity android:name=".myactivity.AddTemplateActivity" />
     </application>
 </manifest>
