그룹 학생의 연습진행상황 보기, 학생 연주분석 보기 뷰 띄우기 성공

--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/AndroidManifest.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/AndroidManifest.xml
@@ -40,5 +40,6 @@
         <activity android:name=".myactivity.GuideActivity" />
         <activity android:name=".myactivity.PracticeListenActivity" />
         <activity android:name=".myactivity.AddTemplateActivity" />
+        <activity android:name=".myactivity.DebugActivity" />
     </application>
 </manifest>
